--- a/main.html
+++ b/main.html
@@ -22,30 +22,29 @@
 <div class="main-wrapper">
     <div class="main">
         <div class="block">
-            <div clas="block-title">ы
-                <span class="block-title-p">местонахождение:</span> <br>
+            <div class="block-title">
+                <span class="block-title-p">Местонахождение:</span>
                 <span class="block-title-t">ванная</span>
             </div>
 
             <div class="block-mode">
-                <span >Режим</span>
+                <span >Состояние:</span>
+                <span class="state state-dry">
+                    ПРОТЕЧКИ НЕТ
+                </span>
+
+            </div>
+            <div class="block-mode">
+                Отслеживание
                 <span>
                     <input class="tgl tgl-skewed" id="cb3" type="checkbox"/>
                     <label class="tgl-btn" data-tg-off="выкл" data-tg-on="вкл" for="cb3"></label>
                 </span>
 
             </div>
-            <div class="block-mode">
-                <span >Состояние</span>
-                <span>
-                    <input class="tgl tgl-skewed" id="cb4" type="checkbox"/>
-                    <label class="tgl-btn" data-tg-off="протек" data-tg-on="сухо" for="cb4"></label>
-                </span>
-
-            </div>
 
         </div>
-        <a href="src/h1.html">Hi</a>
+        <a href="#">Hi</a>
         <br>
         <div class="range"><input type="range" value="25" min="0" max="50" oninput="rangeValue.innerText = this.value">
             <p id="rangeValue">25</p></div>
