--- a/main.html
+++ b/main.html
@@ -23,19 +23,18 @@
     <div class="main">
         <div class="block">
             <div class="block-title">
-                <span class="block-title-p">Местонахождение:</span>
+<!--                <span class="block-title-p">Местонахождение: </span>-->
                 <span class="block-title-t">ванная</span>
+                <hr>
             </div>
 
             <div class="block-mode">
-                <span >Состояние:</span>
-                <span class="state state-dry">
-                    ПРОТЕЧКИ НЕТ
-                </span>
+                <span >Состояние: </span>
+                <span class="state state-dry">ПРОТЕЧКИ НЕТ</span>
 
             </div>
             <div class="block-mode">
-                Отслеживание
+                <span >Отслеживание: </span>
                 <span>
                     <input class="tgl tgl-skewed" id="cb3" type="checkbox"/>
                     <label class="tgl-btn" data-tg-off="выкл" data-tg-on="вкл" for="cb3"></label>
